[package]
name = "stellargate"
version = "0.1.0"
edition = "2021"
license = "MIT"
# Application binary, not a library published to crates.io. `publish = false`
# lets cargo-deny skip it under `[licenses].private` rather than flagging the
# (intentionally unlicensed) workspace crate itself.
publish = false

[[bin]]
name = "stellargate"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "request-id", "timeout"] }
governor = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde_yaml = "0.9"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["parsing"] }
wiremock = "0.6.5"
